welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:6: error: illegal start of simple pattern
		for(j(<-0 to 3)
                      ^MethodsDogHouse:12: error: ')' expected but '}' found.
	}
        ^